apps/memos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.8.1
          ports:
            - containerPort: 5230
          volumeMounts:
            - mountPath: /var/opt/memos
              name: data
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
