apps/memos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  namespace: memos
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cf.containeroo.ch/content: ${BASE_DOMAIN}
    cf.containeroo.ch/type: CNAME
spec:
  ingressClassName: traefik
  rules:
    - host: memos.local.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  number: 5230
